...
            prefixIcon: const Icon(Icons.lock_outline_rounded),
            prefixIconColor: Colors.black54,
            prefixIconConstraints: kIconConstraints,
            suffixIcon: IconButton(
              onPressed: _toggleObscured,
              tooltip: _visibilityCtrl.obscured
                  ? 'Mostrar contraseña'
                  : 'Ocultar contraseña',
              icon: Icon(
                _visibilityCtrl.obscured
                    ? Icons.visibility_outlined
                    : Icons.visibility_off_outlined,
              ),
...
