appId: com.example.nubo_app
env:
  PASSWORD: ${MAESTRO_PASSWORD}
---
- launchApp:
    clearState: true
- tapOn: Ingresar
- extendedWaitUntil:
    visible: Iniciar Sesión
    timeout: 10000
- assertVisible: Iniciar Sesión
- tapOn: Correo
- inputText: "!!@protonmail.e"
- tapOn: Contraseña
- inputText: "H12"
- tapOn:
    text: Iniciar Sesión
    index: 1
- assertVisible: Ingrese un correo válido
- assertVisible: Debe tener al menos 6 caracteres
